--- a/src/main/resources/templates/reservation/reservationItemForm.html
+++ b/src/main/resources/templates/reservation/reservationItemForm.html
@@ -36,7 +36,7 @@
             <div class = "col-sm-10">
                 <input type="hidden" name="id" th:field="${reservation.id}">
                 <button type = "submit" class = "btn btn-primary">Enregistrer</button>
-                <a href="/longueur/list" class = "btn btn-secondary">Annuler</a>
+                <a href="/topo/myTopos" class = "btn btn-secondary">Annuler</a>
             </div>
         </div>
 
