--- a/src/main/resources/templates/topo/topoItemForm.html
+++ b/src/main/resources/templates/topo/topoItemForm.html
@@ -58,7 +58,7 @@
             <div class = "col-sm-10">
                 <input type="hidden" name="id" th:field="${topo.id}">
                 <button type = "submit" class = "btn btn-primary">Enregistrer</button>
-                <a href="/topo/list" class = "btn btn-secondary">Annuler</a>
+                <a href="/topo/myTopos" class = "btn btn-secondary">Annuler</a>
             </div>
         </div>
 
