--- a/src/main/resources/static/css/siteList.css
+++ b/src/main/resources/static/css/siteList.css
@@ -4,12 +4,12 @@ only screen and (max-width: 760px),
     /*
     Label the data
     */
-    td:nth-of-type(1):before { content: "Nom"; }
-    td:nth-of-type(2):before { content: "Voir"; }
-    td:nth-of-type(3):before { content: "Fiche"; }
-    td:nth-of-type(4):before { content: "Modifier"; }
-    td:nth-of-type(5):before { content: "Supprimer"; }
-    td:nth-of-type(6):before { content: ""; }
+    td:nth-of-type(1):before { content: "Officiel"; }
+    td:nth-of-type(2):before { content: "Nom"; }
+    td:nth-of-type(3):before { content: "Voir"; }
+    td:nth-of-type(4):before { content: "Fiche"; }
+    td:nth-of-type(5):before { content: "Modifier"; }
+    td:nth-of-type(6):before { content: "Supprimer"; }
     td:nth-of-type(7):before { content: ""; }
     td:nth-of-type(8):before { content: ""; }
     td:nth-of-type(9):before { content: ""; }
