--- a/src/main/resources/templates/site/siteItemForm.html
+++ b/src/main/resources/templates/site/siteItemForm.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html xmlns:th="http://www.thymeleaf.org" xmlns:data="http://www.w3.org/1999/xhtml" lang="fr">
+<html xmlns:th="http://www.thymeleaf.org" xmlns:data="http://www.w3.org/1999/xhtml"
+      xmlns:sec="http://www.w3.org/1999/xhtml" lang="fr">
 <head >
 <title>Application escalade</title>
 <!-- Required meta tags -->
@@ -17,7 +18,7 @@
     <h2 class = "mt-4">Ajouter un site</h2>
 
     <hr/>
-
+    <!--/*@thymesVar id="site" type="com.begr.escalade.entity.Site"*/-->
     <form action="#" method="post" th:action="@{/site/siteItemForm}">
 
         <div class = "form-group row ">
@@ -29,6 +30,12 @@
                 <span class="text-danger"> </span>
             </div>
         </div>
+        <div sec:authorize="hasAuthority('MEMBER')" class = "form-group row ">
+            <div class="col-sm-4">
+                <label><input th:field="${site.officiel}"  type="checkbox">Officiel</label>
+            </div>
+        </div>
+
         <div class = "form-group row">
             <label for="description" class="col-sm-2 col-form-label">Description</label>
             <div class = "col-sm-4">
