--- a/src/main/resources/templates/site/siteList.html
+++ b/src/main/resources/templates/site/siteList.html
@@ -22,6 +22,7 @@
   <table>
     <thead>
     <tr>
+      <th>Officiel</th>
       <th>nom</th>
       <th>voir</th>
       <th>Fiche</th>
@@ -32,6 +33,7 @@
     <tbody>
 
     <tr th:each="site: ${sites}">
+      <td><span th:text="${site.officiel} ? 'X'"></span></td>
       <td th:text="${site.name}"></td>
       <!-- On crée un bouton et on bind les attributs pour pouvoir les récupérer dans le javascript -->
       <td><button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal"
